Deployment-8-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-8
spec:
  replicas: 3
  selector:
    matchLabels:
      app: redis-8
  template:
    metadata:
      labels:
        app: redis-8
    spec:
      containers:
        - name: redis-8
          image: redis:alpine
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-8
spec:
  selector:
    app: redis-8
  ports:
    - port: 6379
      targetPort: 6379
