Ingress-8.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: backend-8
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`app8.loc`)
      kind: Rule
      services:
        - name: backend-8-service
          port: 8088
  tls:
    secretName: backend-8-cert
